feat: add company catalog public endpoint
