# src/modules/products/products.routes.ts
@@ -22,4 +22,15 @@ export const productsRoutes: FastifyPluginAsync<ProductsRoutesOptions> = async (
       return reply.status(200).send(response);
     }
   );
+
+  app.get(
+    "/companyid",
+    {
+      preHandler: [options.authMiddleware, options.rateLimitMiddleware]
+    },
+    async (request, reply) => {
+      const response = await options.productsService.listCompanyCatalog(request.auth);
+      return reply.status(200).send(response);
+    }
+  );
 };
